RESOLVED FIXED167625
[QuickLook] FrameLoaderClient should return the new QuickLookHandleClient it creates
https://bugs.webkit.org/show_bug.cgi?id=167625
Summary [QuickLook] FrameLoaderClient should return the new QuickLookHandleClient it ...
Andy Estes
Reported 2017-01-30 18:08:55 PST
[QuickLook] FrameLoaderClient should return the new QuickLookHandleClient it creates
Attachments
Patch (16.99 KB, patch)
2017-01-30 18:21 PST, Andy Estes
no flags
Andy Estes
Comment 1 2017-01-30 18:21:21 PST
WebKit Commit Bot
Comment 2 2017-01-30 18:25:03 PST
Attachment 300175 [details] did not pass style-queue: ERROR: Source/WebKit2/WebProcess/WebCoreSupport/ios/WebQuickLookHandleClient.cpp:49: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3 2017-01-30 18:40:27 PST
Comment on attachment 300175 [details] Patch r=me
WebKit Commit Bot
Comment 4 2017-01-30 19:07:29 PST
Comment on attachment 300175 [details] Patch Clearing flags on attachment: 300175 Committed r211402: <http://trac.webkit.org/changeset/211402>
WebKit Commit Bot
Comment 5 2017-01-30 19:07:34 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.