Source/WebCore/loader/FrameLoaderClient.h
@@ -84,7 +84,7 @@ class Page;
 class PluginViewBase;
 class PolicyChecker;
 class ProtectionSpace;
-class QuickLookHandle;
+class QuickLookHandleClient;
 class RTCPeerConnectionHandler;
 class ResourceError;
 class ResourceHandle;
@@ -340,7 +340,7 @@ public:
     virtual bool isEmptyFrameLoaderClient() { return false; }
 
 #if USE(QUICK_LOOK)
-    virtual void didCreateQuickLookHandle(QuickLookHandle&) { }
+    virtual RefPtr<QuickLookHandleClient> createQuickLookHandleClient(const String&, const String&) = 0;
 #endif
 
 #if ENABLE(CONTENT_FILTERING)
