Source/WebCore/loader/ios/QuickLook.h
@@ -63,11 +63,7 @@ public:
     bool didFinishLoading();
     void didFail();
 
-    WEBCORE_EXPORT void setClient(Ref<QuickLookHandleClient>&&);
     WEBCORE_EXPORT static void setClientForTesting(RefPtr<QuickLookHandleClient>&&);
-
-    WEBCORE_EXPORT String previewFileName() const;
-    WEBCORE_EXPORT String previewUTI() const;
 
 private:
     friend std::unique_ptr<QuickLookHandle> std::make_unique<QuickLookHandle>(ResourceLoader&, const ResourceResponse&);
