Source/WebKit2/WebProcess/WebCoreSupport/ios/WebQuickLookHandleClient.h
@@ -41,16 +41,16 @@ class WebFrame;
 
 class WebQuickLookHandleClient final : public WebCore::QuickLookHandleClient {
 public:
-    static Ref<WebQuickLookHandleClient> create(const WebCore::QuickLookHandle& handle, uint64_t pageID)
+    static Ref<WebQuickLookHandleClient> create(const String& fileName, const String& uti, uint64_t pageID)
     {
-        return adoptRef(*new WebQuickLookHandleClient(handle, pageID));
+        return adoptRef(*new WebQuickLookHandleClient(fileName, uti, pageID));
     }
     ~WebQuickLookHandleClient();
 
     static void didReceivePassword(const String&, uint64_t pageID);
 
 private:
-    WebQuickLookHandleClient(const WebCore::QuickLookHandle&, uint64_t pageID);
+    WebQuickLookHandleClient(const String& fileName, const String& uti, uint64_t pageID);
     void didReceiveDataArray(CFArrayRef) override;
     void didFinishLoading() override;
     void didFail() override;
